add custom max width on container

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <header
         class="bg-img min-vh-100 d-flex justify-content-center align-items-center align-content-center flex-column position-relative mb-190">
         <nav class="py-9 w-100">
-            <div class="container">
+            <div class="container max-w-1140">
                 <div class="d-flex align-items-center justify-content-between w-100">
                     <div class="d-flex align-items-center gap-23">
                         <img src="./assets/images/svg/navbar-logo.svg" alt="navbar-logo" class="cursor-pointer">
@@ -67,7 +67,7 @@
             </div>
         </nav>
         <div class="flex-grow-1 d-flex justify-content-center align-items-center">
-            <div class="container">
+            <div class="container max-w-1140">
                 <div class="d-flex justify-content-center">
                     <h1 class="font-family-first fw-normal fs-2xl lh-118 color-white text-center max-w-607 z-1">JOIN THE
                         VICTORIAN RESISTANCE</h1>
@@ -86,7 +86,7 @@
     <!--***** section 1 *****-->
     <section class="d-flex justify-content-center align-items-center align-content-center position-relative mb-178">
         <img src="./assets/images/svg/triangle-svg.svg" alt="triangle-svg" class="position-absolute triangle-svg">
-        <div class="container">
+        <div class="container max-w-1140">
             <div class="row">
                 <div class="col-12 col-lg-5 position-relative">
                     <div class="d-flex justify-content-center">
@@ -132,7 +132,7 @@
     </section>
     <!--***** slider *****-->
     <section class="d-flex justify-content-center align-items-center align-content-center flex-column mb-198">
-        <div class="container">
+        <div class="container max-w-1140">
             <div class="d-flex justify-content-center">
                 <h2 class="font-family-first fw-normal lh-71 text-center color-white fs-xl max-w-632">Your world is the
                     game board, and your mind is at stake.</h2>
@@ -163,7 +163,7 @@
         class="section-3 d-flex justify-content-center align-items-center align-content-center flex-column mb-200 position-relative">
         <img src="./assets/images/svg/left-triangle-img.svg" alt="triangle-svg"
             class="left-triangle position-absolute w- 100">
-        <div class="container">
+        <div class="container max-w-1140">
             <div class="font-family-first fw-normal fs-xl lh-71 text-center color-white">FAQs</div>
             <div class="d-flex justify-content-center">
                 <div class="font-family-second fw-normal fs-sm lh-21 text-center color-white max-w-680 pt-12">Porta
@@ -255,7 +255,7 @@
     <!--***** section 4 *****-->
     <section class="bg-img-2 d-flex align-items-center justify-content-center min-vh-100 mb-32 position-relative">
         <img src="./assets/images/svg/triangle-svg.svg" alt="triangle-img" class="position-absolute triangle-img z-n1">
-        <div class="container">
+        <div class="container max-w-1140">
             <div class="box position-relative">
                 <div class="d-flex justify-content-center justify-content-lg-start">
                     <img src="./assets/images/svg/iphone-2.svg" alt="" class="iphone w-100 d-lg-none ">
@@ -279,7 +279,7 @@
     </section>
     <!--***** footer *****-->
     <footer class="bg-img-3">
-        <div class="container">
+        <div class="container max-w-1140">
             <div class="d-flex justify-content-center">
                 <img src="./assets/images/svg/footer-logo.svg" alt="logo" class="cursor-pointer">
             </div>
